--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
+    android:padding="16dp"
     >
 
     <TextView
@@ -14,9 +15,25 @@
         android:text="Quantity"
         android:textAllCaps="true"
         />
-
     <TextView
         android:id="@+id/quantity_text_view"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        />
+
+    <TextView
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Price"
+        android:textAllCaps="true"
+        />
+    <TextView
+        android:id="@+id/price_text_view"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:layout_width="wrap_content"
