--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,21 @@
     >
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Toppigs"
+        android:layout_marginBottom="24dp"
+        android:textAllCaps="true"
+        />
+    <CheckBox
+        android:id="@+id/hasWhippedCream"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Whipped Cream"
+        android:layout_marginBottom="16dp"
+        />
+
+    <TextView
         android:layout_marginBottom="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,11 +64,11 @@
         android:layout_marginTop="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Price"
+        android:text="Order Summary"
         android:textAllCaps="true"
         />
     <TextView
-        android:id="@+id/price_text_view"
+        android:id="@+id/order_summary_text_view"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:layout_width="wrap_content"
