--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,88 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?><!--#https://classroom.udacity.com/nanodegrees/nd803/parts/77786a60-7223-41bd-8dc1-d786c9c3d0cb/modules/b06fba4d-592b-4383-852c-3b5a818bd70a/lessons/4034888704/concepts/5b798321-219a-4910-9be1-7fcac1e5b8dc-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical"
-    android:padding="16dp"
-    >
+    tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Toppigs"
-        android:layout_marginBottom="24dp"
-        android:textAllCaps="true"
-        />
-    <CheckBox
-        android:id="@+id/hasWhippedCream"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Whipped Cream"
-        android:layout_marginBottom="16dp"
-        />
-
-    <TextView
-        android:layout_marginBottom="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quantity"
-        android:textAllCaps="true"
-        />
     <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-        <Button
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:text="+"
-            android:onClick="increment"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp"
+        >
+
+        <EditText
+            android:id="@+id/customerName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Name"
+            android:inputType="textCapWords"
+            android:textSize="16sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Toppigs"
+            android:layout_marginBottom="24dp"
+            android:textAllCaps="true"
+            />
+        <CheckBox
+            android:id="@+id/hasWhippedCream"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Whipped Cream"
+            android:textSize="16sp"
+            android:layout_marginBottom="16dp"
+            />
+        <CheckBox
+            android:id="@+id/hasChacolate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Chacolate"
+            android:textSize="16sp"
+            android:layout_marginBottom="16dp"
+            />
+
+        <TextView
+            android:layout_marginBottom="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quantity"
+            android:textAllCaps="true"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:text="+"
+                android:onClick="increment"
+                />
+            <TextView
+                android:id="@+id/quantity_text_view"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                />
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:text="-"
+                android:onClick="decrement"
+                />
+        </LinearLayout>
+
+
+        <TextView
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Order Summary"
+            android:textAllCaps="true"
             />
         <TextView
-            android:id="@+id/quantity_text_view"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:id="@+id/order_summary_text_view"
             android:textSize="16sp"
             android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1"
+            android:text="10"
             />
+
         <Button
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:text="-"
-            android:onClick="decrement"
+            android:layout_marginTop="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Order"
+            android:onClick="submitOrder"
             />
     </LinearLayout>
-
-
-    <TextView
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Order Summary"
-        android:textAllCaps="true"
-        />
-    <TextView
-        android:id="@+id/order_summary_text_view"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10"
-        />
-
-    <Button
-        android:layout_marginTop="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Order"
-        android:onClick="submitOrder"
-        />
-
-
-</LinearLayout>
+</ScrollView>
