--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?><!--#https://classroom.udacity.com/nanodegrees/nd803/parts/77786a60-7223-41bd-8dc1-d786c9c3d0cb/modules/b06fba4d-592b-4383-852c-3b5a818bd70a/lessons/4034888704/concepts/5b798321-219a-4910-9be1-7fcac1e5b8dc-->
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        >
+        android:padding="16dp">
 
         <EditText
             android:id="@+id/customerName"
@@ -20,92 +18,78 @@
             android:layout_height="wrap_content"
             android:hint="@string/name"
             android:inputType="textCapWords"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/toppings"
-            android:layout_marginBottom="24dp"
-            android:textAllCaps="true"
-            />
+            style="@style/Widget.AppCompact.JustJava.TextView.Header"
+            android:text="@string/toppings" />
+
         <CheckBox
             android:id="@+id/hasWhippedCream"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/whipped_cream"
-            android:textSize="16sp"
             android:layout_marginBottom="16dp"
-            />
+            android:text="@string/whipped_cream"
+            android:textSize="16sp" />
+
         <CheckBox
             android:id="@+id/hasChacolate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/chacolate"
-            android:textSize="16sp"
             android:layout_marginBottom="16dp"
-            />
+            android:text="@string/chacolate"
+            android:textSize="16sp" />
 
         <TextView
-            android:layout_marginBottom="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/quantity"
-            android:textAllCaps="true"
-            />
+            style="@style/Widget.AppCompact.JustJava.TextView.Header"
+            android:text="@string/quantity" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
+
             <Button
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:text="@string/add"
                 android:onClick="increment"
-                />
+                android:text="@string/add" />
+
             <TextView
                 android:id="@+id/quantity_text_view"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:textSize="16sp"
-                android:textColor="@android:color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
                 android:text="@string/error"
-                />
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
             <Button
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:text="@string/subtract"
                 android:onClick="decrement"
-                />
+                android:text="@string/subtract" />
         </LinearLayout>
 
 
         <TextView
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/order_summary"
-            android:textAllCaps="true"
-            />
+            style="@style/Widget.AppCompact.JustJava.TextView.Header"
+            android:text="@string/order_summary" />
+
         <TextView
             android:id="@+id/order_summary_text_view"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/error"
-            />
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
         <Button
-            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/order"
+            android:layout_marginTop="16dp"
             android:onClick="submitOrder"
-            />
+            android:text="@string/order" />
     </LinearLayout>
 </ScrollView>
