--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <!-- https://material.io/tools/color/#!/?view.left=0&view.right=0&primary.color=2196F3 -->
+    <color name="colorPrimary">#2195f2</color>
+    <color name="colorPrimaryDark">#0068bf</color>
+    <color name="colorPrimaryLight">#6ec5ff</color>
+    <color name="colorSecondary">#ff5722</color>
+    <color name="colorSecondaryDark">#c41c00</color>
+    <color name="colorSecondaryLight">#ff8a50</color>
 </resources>
